# Apoptosis

./: Cargo.toml  new_schema.sql
src/: config.rs  main.rs
src/entity/: entities.rs  lua.rs  manager.rs  mod.rs
src/layers/: mod.rs
src/layers/api/: mod.rs
src/migrations/: add_known_entities.rs
src/service/: axum.rs  cacheserver.rs  kittycat.rs  layer.rs  mod.rs  session.rs  sharedlayer.rs  vfs.rs
src/syscall/: auth.rs  mod.rs  webapi.rs
src/types/: auth.rs  dovewing.rs  votes.rs
src/utils/: asset.rs  dovewing.rs  mod.rs  stratum.rs
