[package]
name = "apoptosis"
version = "0.1.0"
edition = "2024"

[dependencies]
khronos_runtime = { git = "https://github.com/anti-raid/khronos" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.48.0", features = ["full"] }
kittycat = { git = "https://github.com/infinitybotlist/kittycat" }
log = "0.4.29"
indexmap = "2.12.1"
env_logger = "0.11.8"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3.31"
moka = { version = "0.12", features = ["future", "futures-util", "sync"] }
governor = "0.6"

# http
axum = { version = "0.8.4", features = ["macros", "ws"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }

# luacore/discord deps
rand = { version = "0.9", features = ["std"] }
reqwest = { version = "0.12" }
bitflags = { version = "2", features = ["serde"] }

# datetime
chrono = { version = "0.4", features = ["serde"] }
image = "0.25.9"
serde_yaml = "0.9.34"

# discord event gateway
stratum_client = { git = "https://github.com/anti-raid/stratum" }
stratum_common = { git = "https://github.com/anti-raid/stratum" }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]
